# time-series-tutorial

./: .gitignore  HST_Raw_Data.mmrx  README.md
data/experiments/: mlx_tuning_history.csv  tuning_history.csv
data/models/: sleep_apnea_model.safetensors
data/processed/: norm_stats.json
data/raw/patient_001/: events.json
data/raw/patient_002/: events.json  recording.mmrx
data/raw/patient_003/: events.json
data/raw/patient_004/: events.json  recording.mmrx
data/raw/patient_005/: events.json
data/raw/patient_006/: events.json
data/raw/patient_007/: events.json  recording.mmrx
data/raw/patient_008/: events.json  recording.mmrx
data/raw/patient_009/: events.json  recording.mmrx
data/raw/patient_010/: events.json
data/raw/patient_011/: events.json  recording.mmrx
data/results/: summary_report.md
docs/: detailed_experiment_report.md  hst_comparison_report.md  mira_paper_summary.md  mira_paper_summary_th.md  pipeline_improvement_analysis.md  pipeline_runbook.md
examples/: read_minimal.py
hst-detector/: Cargo.toml  tune.py
hst-detector/src/: events.rs  kpi.rs  main.rs  preprocess.rs
hst-detector/src/detectors/: apnea.rs  cheyne_stokes.rs  desaturation.rs  hypopnea.rs  mod.rs  position.rs  snore.rs
hst-detector/src/edf/: mod.rs  reader.rs  signals.rs
hst-mlx/: build_dataset.py  evaluate.py  mira_model.py  model.py  predict.py  requirements.txt  train.py  train_mira.py  tune_mira.py  tune_mlx.py
scripts/: extract_mmrx.py  generate_report.py
submissions/602016_ปัฐธกร/: README.md  notebook.ipynb  requirements.txt
(+33 files in other folders)
