[package]
name = "hst-detector"
version = "0.1.0"
edition = "2021"
description = "Automated sleep event detector for HST (Home Sleep Test) data"

[dependencies]
edfplus = "0.1"
zip = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
rayon = "1"
thiserror = "1"
